--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       * {
         font-family: "Source Sans Pro", sans-serif;
         margin: 0;
+        user-select: none;
       }
     </style>
     <title>Admin Dashboard</title>
